--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h2>Projects</h2>
         <div class="project-card">
             <h3>Radar Project</h3>
-            <p>It's an InSAR radar.</p>
+            <p>InSAR Satellite for Terrain Motion Mapping</p>
             <a href="#" target="_blank">View Project</a>
         </div>
         <div class="project-card">
