--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="project-card">
             <h3>Radar Project</h3>
             <p>InSAR Satellite for Terrain Motion Mapping</p>
-            <a href="elektroedde.se/test" target="_blank">View Project</a>
+            <a href="/test" target="_blank">View Project</a>
         </div>
         <div class="project-card">
             <h3>Temp Project</h3>
