--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="project-card">
             <h3>Temp Project</h3>
             <p>Just a filler temp project.</p>
-            <a href="#" target="_blank">View Project</a>
+            <a href="project" target="_blank">View Project</a>
         </div>
     </section>
 
