--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
         <div class="project-card">
             <h3>Radar Project</h3>
             <p>InSAR Satellite for Terrain Motion Mapping</p>
-            <a href="/test/" target="_blank">View Project</a>
+            <a href="/radar" target="_blank">View Project</a>
         </div>
         <div class="project-card">
             <h3>Temp Project</h3>
             <p>Just a filler temp project.</p>
-            <a href="project" target="_blank">View Project</a>
+            <a href="/project" target="_blank">View Project</a>
         </div>
     </section>
 
