--- a/radar.html
+++ b/radar.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Temp Project</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Temp Project</h1>
     <p>Just a filler temp project.</p>
-</body>
+
+    <button type="button" class="btn btn-success">Success</button>
+  </body>
 </html>
