--- a/index.html
+++ b/index.html
@@ -81,11 +81,9 @@
           <div class="card">
             <img src="radar.jpg" class="card-img-top" alt="..." />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">Radar Technology</h5>
               <p class="card-text">
-                This is a longer card with supporting text below as a natural
-                lead-in to additional content. This content is a little bit
-                longer.
+                Text
               </p>
             </div>
           </div>
@@ -94,11 +92,9 @@
           <div class="card">
             <img src="antenna.jpg" class="card-img-top" alt="..." />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">Antenna Technology</h5>
               <p class="card-text">
-                This is a longer card with supporting text below as a natural
-                lead-in to additional content. This content is a little bit
-                longer.
+                Text
               </p>
             </div>
           </div>
@@ -107,26 +103,13 @@
           <div class="card">
             <img src="electrodynamics.jpg" class="card-img-top" alt="..." />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">Electrodynamics</h5>
               <p class="card-text">
-                This is a longer card with supporting text below as a natural
-                lead-in to additional content.
+                Text
               </p>
             </div>
           </div>
         </div>
-        <div class="col">
-          <div class="card">
-            <img src="radar.jpg" class="card-img-top" alt="..." />
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">
-                This is a longer card with supporting text below as a natural
-                lead-in to additional content. This content is a little bit
-                longer.
-              </p>
-            </div>
-          </div>
         </div>
       </div>
     </section>
@@ -134,9 +117,8 @@
     <footer class="footer">
       <h2>Connect</h2>
       <div class="links">
-        <a href="#" target="_blank">GitHub</a>
-        <a href="#" target="_blank">LinkedIn</a>
-        <a href="mailto:you@example.com">Email</a>
+        <a href="https://www.linkedin.com/in/edvin-b-ba9217361/" target="_blank">LinkedIn</a>
+        <a href="mailto:elektroedde@protonmail.com">Email</a>
       </div>
       <p>&copy; 2025 elektroedde</p>
     </footer>
