--- a/index.html
+++ b/index.html
@@ -51,18 +51,18 @@
     <div class="project-card">
       <h3>Computational Electromagnetics</h3>
       <p>Software development for electromagnetic modeling and simulation</p>
-      <a href="/project" target="_blank">View Project</a>
+      <a href="/project">View Project</a>
     </div>
     <div class="project-card">
       <h3>Radar Project</h3>
       <p>InSAR Satellite for Terrain Motion Mapping</p>
-      <a href="/radar" target="_blank">View Project</a>
+      <a href="/radar">View Project</a>
     </div>
     <div class="project-card">
       <h3>Computer Graphics</h3>
 
       <p>3D graphics programming using the Metal API</p>
-      <a href="/project" target="_blank">View Project</a>
+      <a href="/project">View Project</a>
     </div>
   </section>
 
