--- a/project.html
+++ b/project.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Temp Project</title>
-</head>
-<body>
-    <h1>Temp Project</h1>
-    <p>Just a filler temp project.</p>
-</body>
+  </head>
+  <body>
+    <h1>WIP</h1>
+    <p>WIP</p>
+  </body>
 </html>
