--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
       <div class="collapse navbar-collapse" id="navmenu">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a href="/radar" class="nav-link">Temp</a>
+            <a href="#" class="nav-link">Home</a>
           </li>
           <li class="nav-item">
-            <a href="#temp2" class="nav-link">Temp2</a>
+            <a href="#" class="nav-link">About</a>
           </li>
           <li class="nav-item">
-            <a href="#temp3" class="nav-link">Temp3</a>
+            <a href="#" class="nav-link">Contact</a>
           </li>
         </ul>
       </div>
@@ -48,11 +48,22 @@
   <!-- Projects Section -->
   <section class="projects">
     <h2>Projects</h2>
-    <div class="project-card">
-      <h3>Computational Electromagnetics</h3>
-      <p>Software development for electromagnetic modeling and simulation</p>
-      <a href="/project">View Project</a>
+    <div class="card mb-3" style="max-width: 900px;">
+      <div class="row g-0">
+        <div class="col-md-4" style="max-width: 150px;">
+          <img src="cem.png"  class="img-fluid rounded-start" alt="...">
+        </div>
+        <div class="col-md-8">
+          <div class="card-body">
+            <h5 class="card-title">Computational Electromagnetics</h5>
+            <p class="card-text">Software development for electromagnetic modeling and simulation</p>
+            <p class="card-text"><small class="text-body-secondary">Last updated: Aug 15</small></p>
+            <a href="#" class="btn btn-primary" style="background-color: #fdd835; color: #000000; border-color:#fdd835;">Coming soon</a>
+          </div>
+        </div>
+      </div>
     </div>
+
     <div class="project-card">
       <h3>Radar Project</h3>
       <p>InSAR Satellite for Terrain Motion Mapping</p>
@@ -62,7 +73,7 @@
       <h3>Computer Graphics</h3>
 
       <p>3D graphics programming using the Metal API</p>
-      <a href="/project">View Project</a>
+      <a href="#">Coming soon</a>
     </div>
   </section>
 
