--- a/radar.html
+++ b/radar.html
@@ -71,17 +71,17 @@
         \text{SNR} = \frac{P_t\tau A^2\sigma}{4\pi R^4\lambda^2kT_0F_sL}\]
       </p>
       <img
-        src="insar.png"
+        src="images/radar/insar.png"
         class="img-fluid mx-auto d-block project-image"
         alt="..."
       />
       <img
-        src="terrain.jpeg"
+        src="images/radar/terrain.jpeg"
         class="img-fluid mx-auto d-block project-image"
         alt="Text"
       />
       <img
-        src="phasedifff.png"
+        src="images/radar/phasedifff.png"
         class="img-fluid mx-auto d-block project-image"
         alt="..."
       />
