--- a/cem.html
+++ b/cem.html
@@ -51,10 +51,10 @@
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col">
         <div class="card">
-          <img src="images/cem/fem.jpg" class="card-img-top" alt="..." />
+          <img src="images/cem/emerge.png" class="card-img-top" alt="..." />
           <div class="card-body">
             <h5 class="card-title">EMerge</h5>
-            <p class="card-text">EMerge is a project dedicated to offering free electromagnetic simulation tools in Python.</p>
+            <p class="card-text">EMerge is a project dedicated to offering free electromagnetic simulation tools in Python. I use this software to simulate and analyze electrodynamic problems.</p>
             <a href="https://www.emerge-software.com/" class="btn btn-primary">Check it out!</a>
           </div>
         </div>
