--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <!-- Navigation Bar -->
   <nav class="navbar navbar-expand-lg">
     <div class="container">
-      <a href="#" class="navbar-brand">elektroedde</a>
+      <a href="#" class="navbar-brand">elektroeedde</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
         <span class="navbar-toggler-icon"></span>
       </button>
