--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="collapse navbar-collapse" id="navmenu">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a href="#" class="nav-link">Home</a>
+            <a href="#" class="nav-link">Homee</a>
           </li>
           <li class="nav-item">
             <a href="#" class="nav-link">About</a>
