--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="collapse navbar-collapse" id="navmenu">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a href="#" class="nav-link">Homee</a>
+            <a href="#" class="nav-link">Home</a>
           </li>
           <li class="nav-item">
             <a href="#" class="nav-link">About</a>
@@ -47,7 +47,25 @@
 
   <!-- Projects Section -->
   <section class="projects">
-    <h2>Projects</h2>
+    <h2>Posts</h2>
+
+    <div class="card mb-3" style="max-width: 1000px;">
+      <div class="row g-0">
+        <div class="col-md-4" style="max-width: 150px;">
+          <img src="images/home/cem.png"  class="img-fluid rounded-start" alt="...">
+        </div>
+        <div class="col-md-8">
+          <div class="card-body">
+            <h5 class="card-title">Finite Element Method</h5>
+            <p class="card-text">FEM</p>
+            <p class="card-text"><small class="text-body-secondary">Last updated: Dec 30</small></p>
+            <a href="/cem" class="btn btn-primary">View</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
     <div class="card mb-3" style="max-width: 1000px;">
       <div class="row g-0">
         <div class="col-md-4" style="max-width: 150px;">
@@ -69,6 +87,8 @@
       <p>InSAR Satellite for Terrain Motion Mapping</p>
       <a href="/radar">View Project</a>
     </div>
+
+
     <div class="project-card">
       <h3>Computer Graphics</h3>
 
