--- a/index.html
+++ b/index.html
@@ -51,15 +51,15 @@
 
     <div class="card mb-3" style="max-width: 1000px;">
       <div class="row g-0">
-        <div class="col-md-4" style="max-width: 150px;">
-          <img src="images/home/cem.png"  class="img-fluid rounded-start" alt="...">
+        <div class="col-md-4" style="max-width: 100%;">
+          <img src="images/home/beams.png"  class="img-fluid rounded-start" alt="...">
         </div>
         <div class="col-md-8">
           <div class="card-body">
-            <h5 class="card-title">Finite Element Method</h5>
-            <p class="card-text">FEM</p>
-            <p class="card-text"><small class="text-body-secondary">Last updated: Dec 30</small></p>
-            <a href="/cem" class="btn btn-primary">View</a>
+            <h5 class="card-title">Beam Types</h5>
+            <p class="card-text">About: Gaussian, Hermite-Gaussian, Laguerre-Gaussian, Bessel</p>
+            <p class="card-text"><small class="text-body-secondary">Jan 2, 2026</small></p>
+            <a href="/index" class="btn btn-primary">View</a>
           </div>
         </div>
       </div>
@@ -68,33 +68,20 @@
 
     <div class="card mb-3" style="max-width: 1000px;">
       <div class="row g-0">
-        <div class="col-md-4" style="max-width: 150px;">
-          <img src="images/home/cem.png"  class="img-fluid rounded-start" alt="...">
+        <div class="col-md-4" style="max-width: 100%;">
+          <img src="images/home/fem.png"  class="img-fluid rounded-start" alt="...">
         </div>
         <div class="col-md-8">
           <div class="card-body">
-            <h5 class="card-title">Computational Electromagnetics</h5>
-            <p class="card-text">Software development for electromagnetic modeling and simulation</p>
-            <p class="card-text"><small class="text-body-secondary">Last updated: Aug 15</small></p>
-            <a href="/cem" class="btn btn-primary">View</a>
+            <h5 class="card-title">Finite Element Method</h5>
+            <p class="card-text">About:</p>
+            <p class="card-text"><small class="text-body-secondary">Jan 2, 2026</small></p>
+            <a href="/index" class="btn btn-primary">View</a>
           </div>
         </div>
       </div>
     </div>
 
-    <div class="project-card">
-      <h3>Radar Project</h3>
-      <p>InSAR Satellite for Terrain Motion Mapping</p>
-      <a href="/radar">View Project</a>
-    </div>
-
-
-    <div class="project-card">
-      <h3>Computer Graphics</h3>
-
-      <p>3D graphics programming using the Metal API</p>
-      <a href="#">Coming soon</a>
-    </div>
   </section>
 
   <section class="badges">
