--- a/index.html
+++ b/index.html
@@ -61,12 +61,11 @@
             <h5 class="card-title">Beam Types</h5>
             <p class="card-text">About: Gaussian, Hermite-Gaussian, Laguerre-Gaussian, Bessel</p>
             <p class="card-text"><small class="text-body-secondary">Jan 2, 2026</small></p>
-            <a href="/" class="btn btn-primary">View</a>
+            <a href="/posts/beamtypes.html" class="btn btn-primary">View</a>
           </div>
         </div>
       </div>
     </div>
-
 
     <div class="card mb-3" style="max-width: 1000px;">
       <div class="row g-0">
@@ -83,7 +82,6 @@
         </div>
       </div>
     </div>
-
   </section>
 
   <section class="badges">
