--- a/index.html
+++ b/index.html
@@ -16,28 +16,10 @@
 
 <body>
   <!-- Navigation Bar -->
-  <nav class="navbar navbar-expand-lg">
-    <div class="container">
-      <a href="#" class="navbar-brand">elektroedde</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+  <div id="navbar"></div>
 
-      <div class="collapse navbar-collapse" id="navmenu">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <a href="#" class="nav-link">Home</a>
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link">About</a>
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link">Contact</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+  <script src="/global/navbar.js"></script>
+
 
   <!-- Hero Section -->
   <header class="hero">
@@ -117,14 +99,9 @@
     </div>
   </section>
 
-  <footer class="footer">
-    <h2>Connect</h2>
-    <div class="links">
-      <a href="https://www.linkedin.com/in/edvin-b-ba9217361/" target="_blank">LinkedIn</a>
-      <a href="mailto:elektroedde@protonmail.com">Email</a>
-    </div>
-    <p>&copy; 2025 elektroedde</p>
-  </footer>
+  <div id="footer"></div>
+
+  <script src="/global/footer.js"></script>
 </body>
 
 </html>
