--- a/index.html
+++ b/index.html
@@ -70,31 +70,61 @@
     <h2>Course Specialties</h2>
 
     <!-- Cards Section -->
-    <div class="row row-cols-1 row-cols-md-3 g-4">
+    <div class="row row-cols-2 row-cols-md-3 g-4">
       <div class="col">
         <div class="card">
-          <img src="images/home/radar.jpg" class="card-img-top" alt="..." />
-          <div class="card-body">
-            <h5 class="card-title">Radar Technology</h5>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card">
-          <img src="images/home/antenna.jpg" class="card-img-top" alt="..." />
-          <div class="card-body">
-            <h5 class="card-title">Antenna Technology</h5>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card">
-          <img src="images/home/electrodynamics.jpg" class="card-img-top" alt="..." />
+          <img src="images/courses/electrodynamics.jpg" class="card-img-top" alt="..." />
           <div class="card-body">
             <h5 class="card-title">Electrodynamics</h5>
           </div>
         </div>
       </div>
+
+      <div class="col">
+        <div class="card">
+          <img src="images/courses/laser.webp" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">Lasers</h5>
+          </div>
+        </div>
+      </div>
+
+      <div class="col">
+        <div class="card">
+          <img src="images/courses/fem.png" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">Finite Element Method</h5>
+          </div>
+        </div>
+      </div>
+
+      <div class="col">
+        <div class="card">
+          <img src="images/courses/antenna.jpg" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">Antenna Technology</h5>
+          </div>
+        </div>
+      </div>
+      
+      <div class="col">
+        <div class="card">
+          <img src="images/courses/quantum.jpg" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">Quantum Mechanics</h5>
+          </div>
+        </div>
+      </div>
+
+      <div class="col">
+        <div class="card">
+          <img src="images/courses/radar.jpg" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">Radar Technology</h5>
+          </div>
+        </div>
+      </div>
+
     </div>
     </div>
   </section>
