--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <h5 class="card-title">Finite Element Method</h5>
             <p class="card-text">About:</p>
             <p class="card-text"><small class="text-body-secondary">Jan 2, 2026</small></p>
-            <a href="/" class="btn btn-primary">View</a>
+            <a href="/posts/fem1.html" class="btn btn-primary">View</a>
           </div>
         </div>
       </div>
