--- a/index.html
+++ b/index.html
@@ -36,6 +36,22 @@
     <div class="card mb-3" style="max-width: 1000px;">
       <div class="row g-0">
         <div class="col-md-4" style="max-width: 100%;">
+          <img src="images/home/magnetostatic_fem.png"  class="img-fluid rounded-start" alt="...">
+        </div>
+        <div class="col-md-8">
+          <div class="card-body">
+            <h5 class="card-title">2D Magnetostatic Field (FEM)</h5>
+            <p class="card-text">About: Solution of 2D magnetostatic fields using FEM.</p>
+            <p class="card-text"><small class="text-body-secondary">Jan 27, 2026</small></p>
+            <a href="/posts/magnetostatic_fem.html" class="btn btn-primary">View</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="card mb-3" style="max-width: 1000px;">
+      <div class="row g-0">
+        <div class="col-md-4" style="max-width: 100%;">
           <img src="images/home/beams.png"  class="img-fluid rounded-start" alt="...">
         </div>
         <div class="col-md-8">
