--- a/index.html
+++ b/index.html
@@ -31,7 +31,25 @@
 
   <!-- Projects Section -->
   <section class="projects">
-    <h2>Posts</h2>
+    <h2>Projects</h2>
+
+      <div class="card mb-3" style="max-width: 1000px;">
+      <div class="row g-0">
+        <div class="col-md-4" style="max-width: 100%;">
+          <img src="images/home/cover_image.png"  class="img-fluid rounded-start" alt="...">
+        </div>
+        <div class="col-md-8">
+          <div class="card-body">
+            <h5 class="card-title">Interactive FEM Solver and Visualization Tool</h5>
+            <p class="card-text">A graphical user interface application used for solving finite element method problems.</p>
+            <p class="card-text"><small class="text-body-secondary">Latest update: Feb 7, 2026</small></p>
+            <a href="/projects/fem_application.html" class="btn btn-primary">Check it out!</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--
+    
 
     <div class="card mb-3" style="max-width: 1000px;">
       <div class="row g-0">
@@ -81,6 +99,7 @@
       </div>
     </div>
   </section>
+    -->
 
   <section class="badges">
     <h2>Course Specialties</h2>
